--- a/client/lib/components/suppliers/profile/basics/view.html
+++ b/client/lib/components/suppliers/profile/basics/view.html
@@ -1,4 +1,5 @@
 <template name="basics">
+  <button class="hide test-element"></button>
   <div class="row">
     <!-- Supplier editable information -->
     <div class="col-md-6 col-lg-4">
