--- a/client/stylesheets/components/common.less
+++ b/client/stylesheets/components/common.less
@@ -12,6 +12,8 @@
   margin-top: 10px;
 }
 
-.margin-top-20 {
-  margin-top: 20px;
+@media (max-width: 992px) {
+  .margin-top-20 {
+    margin-top: 20px;
+  }
 }
