--- a/client/lib/components/stocktake/ordering/list/view.html
+++ b/client/lib/components/stocktake/ordering/list/view.html
@@ -3,7 +3,7 @@
     <div class="ibox ">
       <div class="ibox-content">
         {{#if state$isNull}}
-          {{> render component="supplierFilter"}}
+          {{> render component="supplierFilter" onSupplierChanged=state$onSupplierChanged}}
           <table class="table table-condensed table-hover table-striped">
             <thead>
               <tr>
