--- a/client/lib/components/stocktake/ordering/list/view.html
+++ b/client/lib/components/stocktake/ordering/list/view.html
@@ -19,7 +19,7 @@
             </thead>
             <tbody>
               {{#each state$list}}
-                {{> render component="ordersListItem" itemId=this}}
+                {{> render component="ordersListItem" itemId=this onCountChange=state$onCountChange}}
               {{/each}}
             </tbody>
           </table>
