--- a/client/lib/components/suppliers/master_list/submit/view.html
+++ b/client/lib/components/suppliers/master_list/submit/view.html
@@ -32,7 +32,7 @@
 
             <div class="col-sm-6 ">
               <input type="text" class="form-control phone-number" placeholder="Add Phone Number"
-                     title="Phone number" pattern="{{phoneNumberPattern}}">
+                     title="Phone number">
             </div>
           </div>
 
@@ -83,7 +83,7 @@
 
             <div class="col-sm-6 ">
               <input type="text" class="form-control customer-number" placeholder="Business customer number"
-                     title="Phone number" pattern="{{phoneNumberPattern}}">
+                     title="Phone number">
             </div>
           </div>
 
