--- a/client/lib/components/suppliers/profile/basics/view.html
+++ b/client/lib/components/suppliers/profile/basics/view.html
@@ -25,8 +25,8 @@
           <td><a class="supplier-phone">{{state$supplier.phone}}</a></td>
         </tr>
         <tr>
-          <td>Minimum order amount:</td>
-          <td><a class="minimum-order-amount">{{state$supplier.minimumOrderAmount}}</a></td>
+          <td>Minimum order:</td>
+          <td>$<a class="minimum-order-amount">{{state$supplier.minimumOrderAmount}}</a></td>
         </tr>
         <tr>
           <td>Delivery time:</td>
