--- a/client/lib/components/stocktake/ordering/supplier_filter/view.html
+++ b/client/lib/components/stocktake/ordering/supplier_filter/view.html
@@ -1,6 +1,7 @@
 <template name="supplierFilter">
   {{#each state$suppliers}}
-    <a class="btn {{#if state$receiptExists this}} btn-primary {{else}} btn-default {{/if}} activateSupplier" data-id="{{this}}">{{supplierName this}}
+    <a class="btn {{#if state$receiptExists this}} btn-primary {{else}} btn-default {{/if}} activateSupplier" data-id="{{this}}">
+      {{supplierName this}}
     </a>
   {{/each}}
   <hr>
@@ -8,18 +9,18 @@
     <small class="text-info pull-right">
     {{#if state$deliveryDate}}
       Expect delivery on 
-      <a href="#" data-date-format="yyyy-mm-dd" data-date="{{dateFormat state$deliveryDate}}" class="expectedDeliveryDate" data-pk="1">{{timeFormattedWithDate state$deliveryDate}}</a>      
+      <a href="#" data-date-format="yyyy-mm-dd" data-date="{{dateFormat state$deliveryDate}}" class="expectedDeliveryDate" data-pk="1">{{timeFormattedWithDate state$deliveryDate}}</a>
     {{/if}}
     {{#if state$receipt}}
       {{#if state$orderSentDetails}}
       <i class="fa fa-fw fa-check"></i>Status: {{state$orderSentDetails}}
       {{/if}}
     {{else}}
-      <a class="btn btn-primary setOrder" data-type="emailed">
-        <i class="fa fa-envelope-o fa-fw fa-lg"></i>Send email
+      <a class="btn btn-primary orderEmailed" data-type="emailed">
+        <i class="fa fa-envelope-o fa-fw fa-lg orderEmailed"></i>Send email
       </a>
-      <a class="btn btn-primary setOrder" data-type="phoned">
-        <i class="fa fa-fw fa-lg fa-phone"></i>Mark as phoned through
+      <a class="btn btn-primary orderPhoned" data-type="phoned">
+        <i class="fa fa-fw fa-lg fa-phone orderPhoned"></i>Mark as phoned through
       </a>
     {{/if}}
     </small>
