--- a/client/lib/components/suppliers/master_list/submit/view.html
+++ b/client/lib/components/suppliers/master_list/submit/view.html
@@ -2,29 +2,91 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span
+            class="sr-only">Close</span></button>
         <h4 class="modal-title" id="myModalLabel">Add New Supplier</h4>
       </div>
       <form class="form-horizontal" role="form">
         <div class="modal-body">
+          <!-- Supplier's name -->
           <div class="form-group">
             <label class="col-sm-4 control-label">Supplier's Name</label>
+
             <div class="col-sm-6 ">
-              <input type="text" name="name" class="form-control" placeholder="Add Name" >
+              <input type="text" class="form-control supplier-name" placeholder="Add Name">
             </div>
           </div>
+
+          <!-- email -->
           <div class="form-group">
             <label class="col-sm-4 control-label">Email address</label>
+
             <div class="col-sm-6 ">
-              <input type="text" name="email" class="form-control" placeholder="Add Email Address" >
+              <input type="email" class="form-control email" placeholder="Add Email Address">
             </div>
-          </div> 
+          </div>
+
+          <!-- phone number -->
           <div class="form-group">
             <label class="col-sm-4 control-label">Phone Number</label>
+
             <div class="col-sm-6 ">
-              <input type="text" name="phone" class="form-control" placeholder="Add Phone Number" >
+              <input type="text" class="form-control phone-number" placeholder="Add Phone Number"
+                     title="Phone number" pattern="{{phoneNumberPattern}}">
             </div>
-          </div> 
+          </div>
+
+          <!-- minimum order amount -->
+          <div class="form-group">
+            <label class="col-sm-4 control-label">Minimum order amount</label>
+
+            <div class="col-sm-6 ">
+              <input type="number" class="form-control minimum-order-amount" placeholder="Minimum order amount">
+            </div>
+          </div>
+
+          <!-- delivery times -->
+          <div class="form-group">
+            <label class="col-sm-4 control-label">Delivery times</label>
+
+            <div class="col-sm-6 ">
+              <select class="delivery-day-of-week form-control">
+                <option value="sunday">Sunday</option>
+                <option value="monday">Monday</option>
+                <option value="tuesday">Tuesday</option>
+                <option value="wednesday">Wednesday</option>
+                <option value="thursday">Thursday</option>
+                <option value="friday">Friday</option>
+                <option value="saturday">Saturday</option>
+              </select>
+              <div class='input-group date delivery-time'>
+                <input type='text' class="form-control"/>
+                  <span class="input-group-addon">
+                    <span class="glyphicon glyphicon-time"></span>
+                  </span>
+              </div>
+            </div>
+          </div>
+
+          <!-- contact name -->
+          <div class="form-group">
+            <label class="col-sm-4 control-label">Contact name</label>
+
+            <div class="col-sm-6 ">
+              <input type="text" class="form-control contact-name" placeholder="Contact name">
+            </div>
+          </div>
+
+          <!-- business customer number -->
+          <div class="form-group">
+            <label class="col-sm-4 control-label">Business customer number</label>
+
+            <div class="col-sm-6 ">
+              <input type="text" class="form-control customer-number" placeholder="Business customer number"
+                     title="Phone number" pattern="{{phoneNumberPattern}}">
+            </div>
+          </div>
+
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
