--- a/client/lib/components/suppliers/profile/basics/view.html
+++ b/client/lib/components/suppliers/profile/basics/view.html
@@ -32,10 +32,17 @@
           <td>Delivery time:</td>
           <td>
             Every
-            {{>render component="ghostEditableSelect"
-                      values=state$deliveryDays
-                      selected=state$supplier.deliveryDay
-                      onValueChanged=state$onDeliveryDayChanged}}
+            <div>
+              {{#each state$deliveryDays}}
+                <p>
+                  {{#if state$isSelectedDay value}}
+                    <input class="delivery-day" type="checkbox" value="{{value}}" checked="checked"> {{text}}
+                  {{else}}
+                    <input class="delivery-day" type="checkbox" value="{{value}}"> {{text}}
+                  {{/if}}
+                </p>
+              {{/each}}
+            </div>
             at
             <a class="delivery-time">{{timeFormat state$supplier.deliveryTime}}</a>
           </td>
