Added combotime editable

--- a/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/shift-basic.html
+++ b/client/lib/components/roster/weekly-shift-roster/weekly-roster-day/shift-basic/shift-basic.html
@@ -21,7 +21,7 @@
 
     <div class="agile-detail">
       {{#if canEditRoster}}
-        {{> shiftBasicTimeEditable shift=this}}
+        {{> comboTimeEditable params=comboDateParams}}
       {{else}}
         <i class="fa fa-clock-o"></i> {{timeFormat startTime}} - {{timeFormat endTime}}
       {{/if}}
