--- a/client/stylesheets/components/combo-time-editable.less
+++ b/client/stylesheets/components/combo-time-editable.less
@@ -1,3 +1,17 @@
 .time-editable-wrapper {
+  .separator {
+    margin-bottom: 5px;
+  }
 
+  .submit-cancel-buttons-wrapper {
+    margin-top: 10px;
+  }
+
+  .combo-time-element-wrapper {
+    margin: 0;
+    
+    select {
+      margin-bottom: 5px;
+    }
+  }
 }
