--- a/client/lib/components/common/combo-time-editable/combo-time-editable.html
+++ b/client/lib/components/common/combo-time-editable/combo-time-editable.html
@@ -6,13 +6,12 @@
           {{> comboTimeElement value=defaultTime.firstTime minuteStepping=minuteStepping}}
         </div>
         {{#if isTimeRangeMode}}
-          <p>-</p>
-
+          <p class="separator">-</p>
           <div class="second-time">
             {{> comboTimeElement value=defaultTime.secondTime minuteStepping=minuteStepping}}
           </div>
         {{/if}}
-        <div class="form-group">
+        <div class="control-group submit-cancel-buttons-wrapper">
           <button type="submit" class="edit-shift-time-button btn btn-primary"><i class="fa fa-check"></i></button>
           <button type="button" class="cancel-button btn btn-default"><i class="fa fa-remove"></i></button>
         </div>
