Fixed design issue in area settings

--- a/client/lib/components/organizations/areas/area_settings/view.html
+++ b/client/lib/components/organizations/areas/area_settings/view.html
@@ -8,8 +8,10 @@
 
   <div class="flyout-content">
 
-    <h1 class="area-name" style="display: inline-block;" data-id="{{state$area._id}}"
-        data-display="false">{{state$area.name}}</h1>
+    <div class="name-editable-wrapper">
+      <h1 class="area-name" style="display: inline-block;" data-id="{{state$area._id}}"
+          data-display="false">{{state$area.name}}</h1>
+    </div>
 
     <div class="form-group">
       <label class="col-sm-2 control-label">Area Color</label>
