Fixed Mark as read button position

--- a/client/stylesheets/components/notifications.less
+++ b/client/stylesheets/components/notifications.less
@@ -2,8 +2,6 @@
 
 .mark-as-read {
   display: inline-block;
-  position: absolute;
-  top: 23px;
-  right: 8px;
-  cursor: pointer;
+  float: right;
+  margin-top: -30px;
 }
