--- a/client/lib/components/notifications/text/view.html
+++ b/client/lib/components/notifications/text/view.html
@@ -13,9 +13,10 @@
       <div>
         {{{state$notifi.text}}}
       </div>
-    </div>
-    <div class="mark-as-read text-warning">
-      <i class="fa fa-eye readNotification" data-id="{{state$notifi._id}}"></i>
+
+      <div class="mark-as-read text-warning">
+        <button class="btn btn-xs btn-warning readNotification" data-id="{{state$notifi._id}}">Mark as read</button>
+      </div>
     </div>
   </div>
 </template>
