Fixed buttons class

--- a/client/lib/components/user_unavailabilities/leave_requests/view_leave_request/view.html
+++ b/client/lib/components/user_unavailabilities/leave_requests/view_leave_request/view.html
@@ -106,7 +106,7 @@
           <div class="form-group col-md-12">
             <div class="row">
               <div class="col-md-4 col-md-offset-8">
-                <button type="button" class="cancel-button btn btn-primary pull-left btn-white close-flyout-button">
+                <button type="button" class="cancel-button btn pull-left btn-white close-flyout-button">
                   Cancel
                 </button>
                 <button type="submit" class="btn btn-primary pull-right">
