--- a/client/views/app/force-forecast/view.html
+++ b/client/views/app/force-forecast/view.html
@@ -14,4 +14,11 @@
   <h1>
     <button class="btn btn-success update-forecast">Update forecast</button>
   </h1>
+
+  <h1>
+    <button class="test-btn">test</button>
+    <div>
+      {{state$test}}
+    </div>
+  </h1>
 </template>
