--- a/client/lib/components/user_unavailabilities/leave_requests/view_leave_request/view.html
+++ b/client/lib/components/user_unavailabilities/leave_requests/view_leave_request/view.html
@@ -97,7 +97,7 @@
               <div class="col-md-12">
                 <select class="notify-manager-select form-control">
                   {{#each state$managers}}
-                    <option value={{this._id}}>{{this.username}}</option>
+                    <option value={{this._id}}>{{username this._id}}</option>
                   {{/each}}
                 </select>
               </div>
@@ -108,11 +108,11 @@
           <div class="form-group col-md-12">
             <div class="row">
               <div class="col-md-4 col-md-offset-8">
-                <button type="button" class="cancel-button btn pull-left btn-white close-flyout-button">
-                  Cancel
-                </button>
-                <button type="submit" class="btn btn-primary pull-right">
+                <button type="submit" class="btn btn-primary">
                   Add
+                </button>
+                <button type="button" class="cancel-button btn btn-white close-flyout-button">
+                  Cancel
                 </button>
               </div>
             </div>
