--- a/client/lib/components/user_unavailabilities/unavailabilities/new_unavailability/view.html
+++ b/client/lib/components/user_unavailabilities/unavailabilities/new_unavailability/view.html
@@ -77,10 +77,10 @@
         <div class="form-group col-md-12">
           <div class="row">
             <div class="col-md-4 col-md-offset-8">
-              <button type="button" class="cancel-button btn pull-left btn-white close-flyout-button">
+              <button type="submit" class="btn btn-primary">Add</button>
+              <button type="button" class="cancel-button btn btn-white close-flyout-button">
                 Cancel
               </button>
-              <button type="submit" class="btn btn-primary pull-right">Add</button>
             </div>
           </div>
         </div>
