--- a/server/lib/notifications/templates/leave_request.handlebars
+++ b/server/lib/notifications/templates/leave_request.handlebars
@@ -1,12 +1,37 @@
-<div>
+<style>
+  .button-container {
+    margin-top: 5px;
+  }
+
+  .claim-button {
+    margin-top: 5px;
+    padding: 3px 5px;
+    color: #fff;
+    border-radius: 4px;
+  }
+
+  .claim-button:hover {
+    color: #fff;
+  }
+
+  .confirm-button {
+    background-color: #1AB394;
+  }
+
+  .reject-button {
+    background-color: #ED5565;
+  }
+</style>
+
+<p>
   <p>Hello, {{recipientName}}</p>
 
   <p>I want to take time off from {{startDate}} to {{endDate}}</p>
 
   <p>Please, review my <a type="link" href="{{leaveRequestLink}}">leave request</a>.</p>
 
-  <div>
-    <button><a href="{{approveLeaveRequestUrl}}" target="_blank">Approve</a></button>
-    <button><a href="{{declineLeaveRequestUrl}}" target="_blank">Decline</a></button>
-  </div>
+  <p class="button-container">
+    <a href="{{approveLeaveRequestUrl}}" target="_blank" class="claim-button confirm-button">Confirm</a>
+    <a href="{{declineLeaveRequestUrl}}" target="_blank" class="claim-button reject-button">Reject</a>
+  </p>
 </div>
