Partialy ported forecast

--- a/client/views/app/sales-forecast/sales-forecast.less
+++ b/client/views/app/sales-forecast/sales-forecast.less
@@ -4,7 +4,12 @@
     font-size: 12px;
     padding-top: 5px;
   }
+
   #loadMoreBtn {
     margin-top: 10px;
+  }
+
+  .prediction-table-head {
+    text-align: center;
   }
 }
