Got rid from flow-comp in ingredientItemView

--- a/client/views/app/job-items/detail/ingredients-view/job-items-ingredients-view.html
+++ b/client/views/app/job-items/detail/ingredients-view/job-items-ingredients-view.html
@@ -1,7 +1,7 @@
 <template name="ingredientItemView">
   <tr>
-    <td>{{state$quantity}} {{state$ing.portionUsed}}</td>
-    <td>{{state$ing.description}}</td>
-    <td>$ {{state$cost}}</td>
+    <td>{{quantity}} {{ing.portionUsed}}</td>
+    <td>{{ing.description}}</td>
+    <td>$ {{cost}}</td>
   </tr>
 </template>
