--- a/client/views/app/job-items/detail/job-items-detail.html
+++ b/client/views/app/job-items/detail/job-items-detail.html
@@ -62,7 +62,7 @@
                         </thead>
                         <tbody>
                         {{#each state$job.ingredients}}
-                          {{> render component='ingredientItemView' ingredient=this}}
+                          {{> ingredientItemView ingredient=this}}
                         {{/each}}
                         </tbody>
                       </table>
