--- a/client/views/app/sales-forecast/pos-menu-linking/pos-link-item/select-pos/select-pos.html
+++ b/client/views/app/sales-forecast/pos-menu-linking/pos-link-item/select-pos/select-pos.html
@@ -2,8 +2,8 @@
   <div class="add-new-pos-name-section">
     <div class="select-wrapper">
       <select class="selectPosName form-control">
-        {{#each state$allPos}}
-          <option>{{this.name}}</option>
+        {{#each allPos}}
+          <option>{{name}}</option>
         {{/each}}
       </select>
     </div>
