--- a/client/views/app/sales-forecast/pos-menu-linking/pos-link-item/pos-edit-item/pos-edit-item.html
+++ b/client/views/app/sales-forecast/pos-menu-linking/pos-link-item/pos-edit-item/pos-edit-item.html
@@ -1,10 +1,8 @@
 <template name="posEditItem">
   <div class="">
-    {{state$getName}}
+    {{name}}
     <a href='#' class="delete-pos-name text-danger pull-right">
       <i class="fa fa-trash"></i>
     </a>
   </div>
-
-
 </template>
