Sales forecast fully prorted to blaze

--- a/client/views/app/sales-forecast/pos-menu-linking/pos-linking-header/pos-linking-header.html
+++ b/client/views/app/sales-forecast/pos-menu-linking/pos-linking-header/pos-linking-header.html
@@ -1,7 +1,7 @@
 <template name="posMenuLinkingHeader">
   <div class="title-action pos-menu-liking-header">
     <button class="btn btn-warning update-pos-menu-items-button">Update POS Menu Items</button>
-    {{#if state$isSalesSynced}}
+    {{#if isSalesSynced}}
       <button class="btn white-bg sync-sales-button">
         Sales are synced
       </button>
