Fixed unavailability displaying

--- a/client/lib/components/user_unavailabilities/leave_requests/leave_request_item/view.html
+++ b/client/lib/components/user_unavailabilities/leave_requests/leave_request_item/view.html
@@ -2,26 +2,26 @@
   <div class="row item-wrapper">
 
     <!-- Start and end dates -->
-    <div class="col-md-4 leave-requests-item-date">
+    <div class="col-xs-4 leave-requests-item-date">
       <div class="row">
-        <div class="col-md-4 col-md-offset-1">
+        <div class="col-xs-4 col-xs-offset-1">
           <p>{{state$date.startDate}}</p>
         </div>
-        <div class="col-md-2">
+        <div class="col-xs-2">
           <p>-</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-xs-4">
           <p>{{state$date.endDate}}</p>
         </div>
       </div>
     </div>
 
     <!-- Item details -->
-    <div class="col-md-7 item-details-wrapper">
+    <div class="col-xs-7 item-details-wrapper">
       <div class="row">
 
         <!-- Comment -->
-        <div class="col-md-9 item-details">
+        <div class="col-xs-9 item-details">
           <div>
             <div class="row">
               {{#if state$comment}}
@@ -34,7 +34,7 @@
         </div>
 
         <!-- Status and view button -->
-        <div class="col-md-2 col-md-offset-1 item-actions">
+        <div class="col-xs-2 col-xs-offset-1 item-actions">
           <div>
 
             <!-- Leave request status -->
