--- a/client/lib/components/user_unavailabilities/unavailabilities/unavailability_item/view.html
+++ b/client/lib/components/user_unavailabilities/unavailabilities/unavailability_item/view.html
@@ -2,16 +2,16 @@
   <div class="row item-wrapper">
 
     <!-- Date -->
-    <div class="col-md-2 unavailability-item-date">
+    <div class="col-xs-2 unavailability-item-date">
       <div class="row">
         <p>{{state$date}}</p>
       </div>
     </div>
 
     <!-- Item details -->
-    <div class="col-md-9 item-details-wrapper">
+    <div class="col-xs-9 item-details-wrapper">
       <div class="row">
-        <div class="col-md-10 item-details">
+        <div class="col-xs-10 item-details">
           <div>
 
             <!-- Repeat -->
@@ -44,7 +44,7 @@
         </div>
 
         <!-- Delete button -->
-        <div class="col-md-1 col-md-offset-1 item-actions">
+        <div class="col-xs-1 col-xs-offset-1 item-actions">
           <i class="remove-unavailability-button fa fa-trash-o delete-icon pull-right" role="button"></i>
         </div>
       </div>
