--- a/client/lib/components/user_unavailabilities/view.html
+++ b/client/lib/components/user_unavailabilities/view.html
@@ -3,7 +3,7 @@
   <div class="flyout-content">
     <div class="panel-body user-unavailability">
       <!-- User info -->
-      <div class="user-info-wrapper col-md-offset-1">
+      <div class="user-info-wrapper col-xs-8 col-xs-offset-4">
         <div class="profile-image">
           <img alt="image" class="img-responsive" src="{{state$profileImgSrc}}">
         </div>
