--- a/client/lib/components/user_unavailabilities/unavailabilities-or-leave-requests/view.html
+++ b/client/lib/components/user_unavailabilities/unavailabilities-or-leave-requests/view.html
@@ -3,12 +3,12 @@
     <div class="row component-header">
 
       <!-- Component name(unavailability or leave request) -->
-      <div class="col-md-6">
+      <div class="col-xs-6">
         <h4 class="pull-left">{{state$componentHeader}}</h4>
       </div>
 
       <!-- Add new item button -->
-      <div class="col-md-5">
+      <div class="col-xs-5">
         <button class="new-item-button pull-right btn btn-primary btn-xs">Add new</button>
       </div>
     </div>
