--- a/client/lib/components/user_unavailabilities/unavailabilities/new_unavailability/view.html
+++ b/client/lib/components/user_unavailabilities/unavailabilities/new_unavailability/view.html
@@ -5,24 +5,24 @@
       <form class="form-horizontal unavailability-form">
 
         <!-- Date -->
-        <div class="form-group col-md-12">
+        <div class="form-group col-xs-12">
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-xs-12">
               <label>Date</label>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-9">
+            <div class="col-xs-9">
               <div class="date-picker input-group">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                 <input class="set-due-date form-control" type="text"/>
               </div>
             </div>
-            <div class="col-md-3">
-              <div class="col-md-6">
+            <div class="col-xs-3">
+              <div class="col-xs-6">
                 <input type="checkbox" class="all-day-checkbox">
               </div>
-              <div class="col-md-6">
+              <div class="col-xs-6">
                 <label>All day?</label>
               </div>
             </div>
@@ -30,7 +30,7 @@
         </div>
 
         <!-- Time -->
-        <div class="form-group col-md-12 {{state$timePickerVisibility}}">
+        <div class="form-group col-xs-12 {{state$timePickerVisibility}}">
           <div class="start-time-picker input-group">
             <span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
             <input class="set-due-date form-control" type="text"/>
@@ -42,14 +42,14 @@
         </div>
 
         <!-- Repeats -->
-        <div class="form-group col-md-12">
+        <div class="form-group col-xs-12">
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-xs-12">
               <label>Repeat</label>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-xs-12">
               <select class="repeat-select form-control">
                 <option value="never">Never</option>
                 <option value="weekly">Weekly</option>
@@ -60,23 +60,23 @@
         </div>
 
         <!-- Comment -->
-        <div class="form-group col-md-12">
+        <div class="form-group col-xs-12">
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-xs-12">
               <label>Comment</label>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-xs-12">
               <input class="comment-input form-control" type="text">
             </div>
           </div>
         </div>
 
         <!-- Submit/cancel -->
-        <div class="form-group col-md-12">
+        <div class="form-group col-xs-12">
           <div class="row">
-            <div class="col-md-4 col-md-offset-8">
+            <div class="col-xs-4 col-xs-offset-8">
               <button type="submit" class="btn btn-primary">Add</button>
               <button type="button" class="cancel-button btn btn-white close-flyout-button">
                 Cancel
