--- a/client/views/app/sales-forecast/pos-menu-linking/pos-menu-linking.less
+++ b/client/views/app/sales-forecast/pos-menu-linking/pos-menu-linking.less
@@ -1,4 +1,4 @@
-@import "../theme-globals.import.less";
+@import "../../../../stylesheets/theme-globals.import.less";
 
 .pos-menu-link-component {
   .revel-link-menu-item-component {
