Ported top heading

--- a/client/views/app/job-items/submit_view.html
+++ b/client/views/app/job-items/submit_view.html
@@ -1,6 +1,6 @@
 <template name="submitJobItemMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title='Submit Job' category='Job' name="jobsubmit"}}
+  {{> pageHeading title='Submit Job' category='Job' name="jobsubmit"}}
 
   <div class="wrapper wrapper-content animated">
     <div class="row">
