--- a/client/views/app/locations/locations_list.html
+++ b/client/views/app/locations/locations_list.html
@@ -1,6 +1,6 @@
 <template name="locationsList">
   <!-- Page heading -->
-  {{> render component="pageHeading" title="Locations" category="Organization"}}
+  {{> pageHeading title="Locations" category="Organization"}}
   <div class="wrapper wrapper-content">
     <div class="row">
       <div class="col-md-12">
