--- a/client/views/app/menu-items/submit_view.html
+++ b/client/views/app/menu-items/submit_view.html
@@ -1,6 +1,6 @@
 <template name="menuItemSubmitMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title='Submit Menu' category='Menus' name="menusubmit"}}
+  {{> pageHeading title='Submit Menu' category='Menus' name="menusubmit"}}
 
   <div class="wrapper wrapper-content animated">
     <div class="row">
