--- a/client/views/app/roster/weekly/view.html
+++ b/client/views/app/roster/weekly/view.html
@@ -1,6 +1,6 @@
 <template name="weeklyRosterMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title="Weekly Roster" category='Roster' name="weeklyroster"}}
+  {{> pageHeading title="Weekly Roster" category='Roster' name="weeklyroster"}}
 
 
   {{#if canViewForecast}}
