--- a/client/views/app/stock/list_view.html
+++ b/client/views/app/stock/list_view.html
@@ -1,6 +1,6 @@
 <template name="listOfStocksMasterMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title='Stock List' category="Stocks" name="ingredientslist"}}
+  {{> pageHeading title='Stock List' category="Stocks" name="ingredientslist"}}
 
   <div class="wrapper wrapper-content animated">
     <div class="row">
