--- a/client/lib/components/menu-items/menuitems_header/details_header/view.html
+++ b/client/lib/components/menu-items/menuitems_header/details_header/view.html
@@ -63,7 +63,7 @@
     <!--AREA CHOOSER-->
     <div class="modal fade" id="areaChooser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
          aria-hidden="true">
-      {{> render component = 'areaChooser' onAreaSelected=state$onAreaSelected}}
+      {{> areaChooser onAreaSelected=state$onAreaSelected}}
     </div>
     <!--AREA CHOOSER-->
   {{/if}}
