--- a/client/views/app/admin/view.html
+++ b/client/views/app/admin/view.html
@@ -1,6 +1,6 @@
 <template name="adminMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title=title category="Settings" name=component}}
+  {{> pageHeading title=title category="Settings" name=component}}
 
   <div class="wrapper wrapper-content">
     <div class="row">
