--- a/client/views/app/job-items/list_view.html
+++ b/client/views/app/job-items/list_view.html
@@ -1,6 +1,6 @@
 <template name="jobItemsListMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title='Jobs List' category='Jobs' name="jobslist"}}
+  {{> pageHeading title='Jobs List' category='Jobs' name="jobslist"}}
 
   <div class="wrapper wrapper-content">
     <div class="row">
