--- a/client/views/app/menu-items/list_view.html
+++ b/client/views/app/menu-items/list_view.html
@@ -1,6 +1,6 @@
 <template name="menuItemsListMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title="Menus List" category='Menus' name="menulist"}}
+  {{> pageHeading title="Menus List" category='Menus' name="menulist"}}
 
   <div class="wrapper wrapper-content animated">
     {{> render component="menuFilters"}}
