--- a/client/views/app/navigations/heading/breadcrumbs/breadcrumbs.html
+++ b/client/views/app/navigations/heading/breadcrumbs/breadcrumbs.html
@@ -2,38 +2,38 @@
   <!-- BREADCRUMBS -->
   <div class="col-sm-6">
     <h2>
-      {{#if state$isMenuDetailed}}
+      {{#if isMenuDetailed}}
         {{#if canEditMenu}}
           <a href="#"
              class="editMenuItemName"
              style="color: #676a6c; border-color: #676a6c;">
-            {{state$title}}
+            {{title}}
           </a>
         {{else}}
-          {{state$title}}
+          {{title}}
         {{/if}}
       {{else}}
-        {{state$title}}
+        {{title}}
       {{/if}}
     </h2>
     <ol class="breadcrumb">
       <li>
         <a href="{{pathFor route='home'}}">Home</a>
       </li>
-      {{#if state$heading.category}}
+      {{#if heading.category}}
         <li>
           <a href="#" class="breadcrumbCategory"
-             data-category="{{state$heading.category}}">{{state$heading.category}}</a>
+             data-category="{{heading.category}}">{{heading.category}}</a>
         </li>
       {{/if}}
-      {{#if state$heading.subCategory}}
+      {{#if heading.subCategory}}
         <li>
-          <a href="#" class="breadcrumbSubCategory" data-category="{{state$heading.category}}"
-             data-id="{{state$id}}">{{state$heading.subCategory}}</a>
+          <a href="#" class="breadcrumbSubCategory" data-category="{{heading.category}}"
+             data-id="{{id}}">{{heading.subCategory}}</a>
         </li>
       {{/if}}
       <li class="active">
-        <strong>{{state$title}}</strong>
+        <strong>{{title}}</strong>
       </li>
     </ol>
   </div>
