--- a/client/views/app/roster/template/view.html
+++ b/client/views/app/roster/template/view.html
@@ -1,6 +1,6 @@
 <template name="weeklyRosterTemplateMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title="Template Weekly Roster" category='Roster' name="weeklyrostertemplate"}}
+  {{> pageHeading title="Template Weekly Roster" category='Roster' name="weeklyrostertemplate"}}
 
   <div class="wrapper wrapper-content animated">
     {{> render component="weeklyShiftRoster" type="template"}}
