--- a/client/views/app/sales-forecast/sales-forecast.html
+++ b/client/views/app/sales-forecast/sales-forecast.html
@@ -1,6 +1,6 @@
 <template name="salesPredictionPage">
   <!-- Page heading -->
-  {{> render component="pageHeading" title="Forecast" name="salesPrediction"}}
+  {{> pageHeading title="Forecast" name="salesPrediction"}}
 
   <div class="wrapper wrapper-content animated sales-prediction-content">
     <div class="row">
