--- a/client/views/app/stocktake/counting_view.html
+++ b/client/views/app/stocktake/counting_view.html
@@ -1,6 +1,6 @@
 <template name="stocktakeCountingMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title='Stocktake Counting' category="Stocktake List"}}
+  {{> pageHeading title='Stocktake Counting' category="Stocktake List"}}
 
   <div class="wrapper wrapper-content">
     {{> render component='stockCounting'}}
