--- a/client/views/app/stocktake/order_receive.html
+++ b/client/views/app/stocktake/order_receive.html
@@ -1,6 +1,6 @@
 <template name="orderReceiveMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title=title category="Stocktake"}}
+  {{> pageHeading title=title category="Stocktake"}}
 
   <div class="wrapper wrapper-content">
     <div class="row">
