--- a/client/views/app/supplier/list.html
+++ b/client/views/app/supplier/list.html
@@ -1,6 +1,6 @@
 <template name="suppliersListMainView">
   <!-- Page heading -->
-  {{> render component="pageHeading" title='Suppliers List' category="Stocks" name="suppliersListHeader"}}
+  {{> pageHeading title='Suppliers List' category="Stocks" name="suppliersListHeader"}}
 
   <div class="wrapper wrapper-content animated">
     <div class="row">
